--- a/app/index.html
+++ b/app/index.html
@@ -27,13 +27,12 @@
   <![endif]-->
 
 
-  HI
+  Contacts
   <contacts-container></contacts-container>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
 
   <script src="contacts/contacts.module.js"></script>
